--- a/NasaApp/app/src/main/res/values/colors.xml
+++ b/NasaApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="buttonColor">#0066B2</color>
+    <color name="buttonTextColor">#E5E5E5</color>
+    <color name="background">#260066B2</color>
 </resources>
